--- a/nginx.yaml
+++ b/nginx.yaml
@@ -1,28 +1,81 @@
+##版本号,pod资源
 apiVersion: apps/v1
+##类型/控制器
 kind: Deployment
+##数据标签
 metadata:
-  name: nginx-deployment
+  ##容器名称
+  name: mynginx
+  ##子标签
+  namespace: default
   labels:
-    app: nginx
+    ##业务容器
+    app: mynginx
 spec:
-  replicas: 3
+  ##副本数
+  replicas: 1
+  ##选择器
   selector:
+    ##匹配标签
     matchLabels:
-      app: nginx
+      ##对应上面的容器名称
+      app: mynginx
+  ##模板
   template:
     metadata:
       labels:
-        app: nginx
+        ##对应上面的容器名称
+        app: mynginx
+    #指定资源内容
     spec:
+      ##业务容器
       containers:
-      - name: nginx
-        image: nginx:1.7.9
-        ports:
-        - containerPort: 80
-        resources:
-          requests:
-            cpu: 1
-            memory: 500Mi
-          limits:
-            cpu: 2
-            memory: 1024Mi
+        ##对应上面的容器名称
+        - name: mynginx
+          ##使用哪个镜像
+          image: nginx
+          ports:
+            ##容器端口信息
+            - containerPort: 80
+              ##协议
+              protocol: TCP
+          resources:
+            limits:
+              cpu: 150m
+              memory: 500Mi
+            requests:
+              cpu: 10m
+              memory: 10Mi
+          # 错误日志路径和类型
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      terminationGracePeriodSeconds: 30
+---
+##版本号
+apiVersion: v1
+##服务类型
+kind: Service
+metadata:
+  name: mynginx
+  namespace: default
+  labels:
+    app: mynginx
+spec:
+  ports:
+    - name: http
+      ##内部端口
+      port: 80
+      protocol: TCP
+      ##映射端口
+      targetPort: 80
+      ##指定访问端口
+      nodePort: 30002
+  ##选择器
+  selector:
+    ##选择业务进行发布
+    app: mynginx
+  sessionAffinity: None
+  ##端口映射
+  type: NodePort
